desktop/src/app/components/information-panel/information-panel.component.scss
@import url('https://fonts.googleapis.com/css?family=Proxima+Nova');

mat-card {
    width: 100%;
    padding: 32px;
    height: fit-content;
    display: flex;
    flex-direction: column;
}

.justified {
    padding-bottom: 200px;
}

.players {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.player {
    width: 100%;
    padding: 15px;
    margin-bottom: 15px;
    display: flex;
    align-items: center;
    border-radius: 5px;
    border-color: #fff0;
}

.active {
    transform: scale(1.05);
}

.name-points-clock {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.time {
    transform: scale(1.5);
    display: flex;
    align-items: flex-end;
}

.countdown {
    transform: scale(1.5);
    display: flex;
    align-items: flex-end;
    animation-name: color;
    animation-duration: 1s;
    animation-iteration-count: infinite;
}

.selector-avatar {
    height: 40px;
    aspect-ratio: 1;
    border-radius: 50%;
    object-fit: cover;
}

td {
    padding-left: 5px;
    font-family: 'proxima-nova', sans-serif;
    font-weight: bold;
    cursor: pointer;
}

.complete {
    font-family: 'proxima-nova', sans-serif;
    font-weight: lighter/bolder;
    text-decoration: line-through;
    display: block;
}

.mat-expansion-panel {
    padding: 5px;
    margin-left: 5px;
    margin-right: 5px;
    margin-bottom: 20px;
}

.mat-expansion-panel:not([class*='mat-elevation-z']) {
    box-shadow: none;
}

.mat-expansion-panel-header-title {
    color: rgb(35 80 31);
    font-family: system-ui;
    font-size: 20px;
    font-weight: 600;
}

.mat-expansion-panel-header-title > mat-icon {
    padding-right: 7px;
}

::ng-deep .mat-expansion-panel-body {
    padding: 0 24px 0px !important;
}

.assignment-icon {
    float: left;
}

.objective-tr {
    display: flex;
    vertical-align: inherit;
    border-color: inherit;
    padding-top: 1px;
    padding-bottom: 12px;
}

// .numberCircle {
//     border-radius: 50%;
//     width: 12px;
//     height: 12px;
//     padding: 6px;
//     font-family: 'proxima-nova', sans-serif;
//     font-weight: bolder !important;
//     font-size: 10px;
//     float: right;
//     display: flex;
//     align-items: center;
//     justify-content: center;
//     text-decoration: none !important;
// }

// .isPublic-obj {
//     opacity: 0.8;
//     font-family: 'proxima-nova', sans-serif;
//     font-weight: lighter;
//     font-size: small;
//     float: left;
//     display: flex;
//     padding-right: 7px;
//     margin: 0 0 0px;
// }

.help-button {
    align-self: flex-end;
}

#td-objective {
    display: block;
    font-family: 'proxima-nova', sans-serif;
    font-weight: bold;
}

.obj-paragraph {
    font-family: system-ui;
    font-weight: bold;
    font-size: 13px;
}

.objective-completed {
    transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
    position: relative;
    padding: 7px;
    border-radius: 12px;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    // border: 1px solid #609987;
    display: inline-block;
    background-color: rgba(0, 0, 0, 0);
}

.rack-letters {
    font-weight: bold;
}

.playerInfo {
    text-align: left;
}

.playerInfo b {
    font-size: 18px;
}

::ng-deep .mat-body p,
::ng-deep .mat-body-1 p,
::ng-deep .mat-typography p {
    margin: 0;
    margin-bottom: 5px;
}

.clue-buttons {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    width: 100%;
}

.message-container {

}

.panel-top {
    top: 8px;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 32px;
}

.timer {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    width: max-content;
}

#reserve {
    margin-bottom: 16px;
    align-items: center;
    color: #23501f;
    display: flex;
}

#number-letters {
    font-weight: 500;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #fbd7a3;
    border-radius: 3px;
    margin: 10px;
    width: 30px;
    height: 30px;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
    text-align: center;
}

